deploy/overlays/dev/imagepullsecret-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: todo-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
